--- a/app/src/main/res/color/text_navigation.xml
+++ b/app/src/main/res/color/text_navigation.xml
@@ -2,7 +2,7 @@
 
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <item android:color="@color/green" android:state_checked="true"/>
+    <item android:color="#2BB29C" android:state_checked="true"/>
     <item android:color="@android:color/black" android:state_checked="false"/>
 
 </selector>
