--- a/app/src/main/res/layout/view_toolbar.xml
+++ b/app/src/main/res/layout/view_toolbar.xml
@@ -7,7 +7,7 @@
     android:id="@+id/toolbar"
     android:layout_width="match_parent"
     android:layout_height="?attr/actionBarSize"
-    android:background="?backgroundColorGreen"
+    android:background="@drawable/dashborad_color"
     android:theme="@style/Toolbar"
     app:popupTheme="@style/ToolbarPopup"
     app:contentInsetStartWithNavigation="0dp">
