--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -40,6 +40,7 @@
     <color name="red_light">#ffe96353</color>
     <color name="red_dark">#ffc95a4a</color>
     <color name="yellow">#FBC02D</color>
+    <color name="transparent">#0000</color>
 
     <color name="blue">#5771cd</color>
 
