--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -45,7 +45,7 @@
         <com.google.android.material.navigation.NavigationView
             android:id="@+id/navigation_drawer"
             android:layout_height="match_parent"
-            android:layout_width="@dimen/navigation_drawer_width"
+            android:layout_width="0dp"
             android:layout_gravity="start"
             app:menu="@menu/navigation"
             app:headerLayout="@layout/view_empty"
