--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -47,12 +47,12 @@
                         android:textSize="20sp"
                         android:textStyle="bold" />
 
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:alpha="0.8"
-                        android:text="mg/dl"
-                        android:textColor="@color/bpWhite" />
+<!--                    <TextView-->
+<!--                        android:layout_width="wrap_content"-->
+<!--                        android:layout_height="wrap_content"-->
+<!--                        android:alpha="0.8"-->
+<!--                        android:text="mg/dl"-->
+<!--                        android:textColor="@color/bpWhite" />-->
 
 
                 </LinearLayout>
@@ -160,12 +160,12 @@
                         android:textSize="20sp"
                         android:textStyle="bold" />
 
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:alpha="0.8"
-                        android:text="mg/dl"
-                        android:textColor="@color/bpWhite" />
+<!--                    <TextView-->
+<!--                        android:layout_width="wrap_content"-->
+<!--                        android:layout_height="wrap_content"-->
+<!--                        android:alpha="0.8"-->
+<!--                        android:text="mg/dl"-->
+<!--                        android:textColor="@color/bpWhite" />-->
                 </LinearLayout>
             </LinearLayout>
 
@@ -195,8 +195,8 @@
             android:clickable="true"
             android:contentDescription="@string/today"
             android:focusable="true"
-            android:foreground="?android:attr/selectableItemBackground"
-            app:cardCornerRadius="4dp"
+            app:cardBackgroundColor="@color/bpWhite"
+             app:cardCornerRadius="4dp"
             app:cardElevation="2dp"
             app:cardUseCompatPadding="true">
 
@@ -246,6 +246,8 @@
             android:foreground="?android:attr/selectableItemBackground"
             app:cardCornerRadius="4dp"
             app:cardElevation="2dp"
+            app:cardBackgroundColor="@color/bpWhite"
+
             app:cardUseCompatPadding="true">
 
             <LinearLayout
@@ -298,6 +300,8 @@
                 android:layout_weight="1"
                 android:clickable="true"
                 android:contentDescription="@string/today"
+                app:cardBackgroundColor="@color/bpWhite"
+
                 android:focusable="true"
                 android:foreground="?android:attr/selectableItemBackground"
                 app:cardCornerRadius="4dp"
@@ -343,6 +347,8 @@
                 android:clickable="true"
                 android:contentDescription="@string/today"
                 android:focusable="true"
+                app:cardBackgroundColor="@color/bpWhite"
+
                 android:foreground="?android:attr/selectableItemBackground"
                 app:cardCornerRadius="4dp"
                 app:cardElevation="2dp"
@@ -395,6 +401,8 @@
                 android:clickable="true"
                 android:contentDescription="@string/today"
                 android:focusable="true"
+                app:cardBackgroundColor="@color/bpWhite"
+
                 android:foreground="?android:attr/selectableItemBackground"
                 app:cardCornerRadius="4dp"
                 app:cardElevation="2dp"
@@ -430,13 +438,15 @@
             </androidx.cardview.widget.CardView>
             <!-- Averages -->
             <androidx.cardview.widget.CardView
-                android:id="@+id/layout_settings"
+                android:id="@+id/layout_log"
                 android:layout_width="100dp"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="1dp"
                 android:layout_marginRight="1dp"
                 android:layout_weight="1"
                 android:clickable="true"
+                app:cardBackgroundColor="@color/bpWhite"
+
                 android:contentDescription="@string/today"
                 android:focusable="true"
                 android:foreground="?android:attr/selectableItemBackground"
@@ -455,14 +465,14 @@
                         android:layout_width="60dp"
                         android:layout_height="60dp"
                         android:layout_gravity="center_horizontal"
-                        android:src="@drawable/settings">
+                        android:src="@drawable/calendar">
 
                     </pl.droidsonroids.gif.GifImageView>
                     <TextView
                         style="@style/BoxRow"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="@string/settings"
+                        android:text="@string/log"
                         android:textColor="?colorPrimary"
                         android:layout_gravity="center_horizontal"
                         />
@@ -473,76 +483,129 @@
 
             </androidx.cardview.widget.CardView>
         </LinearLayout>
+<LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="horizontal">
+    <androidx.cardview.widget.CardView
+        android:id="@+id/layout_settings"
+        android:layout_width="190dp"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="1dp"
+        android:layout_marginRight="1dp"
+        android:clickable="true"
+        android:contentDescription="@string/today"
+        android:focusable="true"
+        app:cardBackgroundColor="@color/bpWhite"
 
+        android:layout_gravity="right"
+        android:foreground="?android:attr/selectableItemBackground"
+        app:cardCornerRadius="4dp"
+        app:cardElevation="2dp"
+        app:cardUseCompatPadding="true">
+
+        <LinearLayout
+            style="@style/Padding"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:orientation="vertical">
+
+            <pl.droidsonroids.gif.GifImageView
+                android:layout_width="60dp"
+                android:layout_height="60dp"
+                android:layout_gravity="center_horizontal"
+                android:src="@drawable/settings">
+
+            </pl.droidsonroids.gif.GifImageView>
+            <TextView
+                style="@style/BoxRow"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/settings"
+                android:textColor="?colorPrimary"
+                android:layout_gravity="center_horizontal"
+                />
+
+
+
+        </LinearLayout>
+
+    </androidx.cardview.widget.CardView>
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
 
         <LinearLayout
             android:layout_width="wrap_content"
-            android:layout_height="76dp"
-            android:orientation="horizontal">
+            android:layout_height="wrap_content">
 
-
-            <LinearLayout
+            <include
+                android:id="@+id/layout_alarm"
+                layout="@layout/view_alarm"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content">
-
-                <androidx.cardview.widget.CardView
-                    android:id="@+id/layout_hba1c"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="2dp"
-                    android:clickable="true"
-                    android:contentDescription="@string/hba1c"
-                    android:focusable="true"
-                    android:foreground="?android:attr/selectableItemBackground"
-                    app:cardCornerRadius="18dp"
-                    app:cardElevation="2dp"
-                    app:cardUseCompatPadding="true">
-
-                    <LinearLayout
-                        style="@style/Padding"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center"
-                        android:gravity="center_vertical"
-                        android:minHeight="@dimen/height_element"
-                        android:orientation="horizontal">
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="hba1c" />
-
-                        <TextView
-                            android:id="@+id/hba1c_value"
-                            android:layout_width="0dp"
-                            android:layout_height="wrap_content"
-                            android:layout_marginStart="@dimen/margin_between"
-                            android:layout_marginLeft="@dimen/margin_between"
-                            android:layout_weight="1"
-                            android:gravity="end"
-                            android:textColor="?android:attr/textColorPrimary"
-                            tools:text="-" />
-
-                    </LinearLayout>
-
-                </androidx.cardview.widget.CardView>
-
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content">
-
-                    <include
-                        android:id="@+id/layout_alarm"
-                        layout="@layout/view_alarm"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center_horizontal" />
-
-                </LinearLayout>
-            </LinearLayout>
+                android:layout_height="wrap_content"
+                />
 
         </LinearLayout>
-        
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+
+            <androidx.cardview.widget.CardView
+                android:id="@+id/layout_hba1c"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="2dp"
+                android:clickable="true"
+                android:contentDescription="@string/hba1c"
+                android:focusable="true"
+                android:foreground="?android:attr/selectableItemBackground"
+                app:cardCornerRadius="18dp"
+                app:cardElevation="2dp"
+                app:cardUseCompatPadding="true">
+
+                <LinearLayout
+                    style="@style/Padding"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:gravity="center_vertical"
+                    android:minHeight="@dimen/height_element"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="hba1c" />
+
+                    <TextView
+                        android:id="@+id/hba1c_value"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="@dimen/margin_between"
+                        android:layout_marginLeft="@dimen/margin_between"
+                        android:layout_weight="1"
+                        android:gravity="end"
+                        android:textColor="?android:attr/textColorPrimary"
+                        tools:text="-" />
+
+                </LinearLayout>
+
+            </androidx.cardview.widget.CardView>
+
+
+        </LinearLayout>
+
+    </LinearLayout>
+
+
+</LinearLayout>
+
+
+
 
     </LinearLayout>
 
